fix image resizing on mobile browser

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4263,74 +4263,20 @@
 			-webkit-flex-shrink: 1;
 			-ms-flex-shrink: 1;
 			flex-shrink: 1;
-			margin: 0 0 6em 6em;
+			margin: 0 0 1em 2em;
 			position: relative;
 			width: calc(33.33333% - 6em);
 		}
 
-			.popup-gallery article:before {
-				background: rgba(210, 215, 217, 0.75);
-				content: '';
-				display: block;
-				height: calc(100% + 6em);
-				left: -3em;
-				position: absolute;
-				top: 0;
-				width: 1px;
-			}
-
-			.popup-gallery article:after {
-				background: rgba(210, 215, 217, 0.75);
-				bottom: -3em;
-				content: '';
-				display: block;
-				height: 1px;
-				position: absolute;
-				right: 0;
-				width: calc(100% + 6em);
-			}
 
 			.popup-gallery article > :last-child {
 				margin-bottom: 0;
 			}
 
-			/* Dan's additions for article-image */
-			
-			.popup-gallery article .article-image {
-				display: flex;
-				background-repeat: no-repeat;
-				background-position: center center;
-			/*	height: 220px; */
-				border-radius: 0.375em; 
-				border: 0;
-				align-items: center;
-				justify-content: center;
-				-webkit-transition: background 0.2s linear;
-                -moz-transition: background 0.2s linear;
-                -ms-transition: background 0.2s linear;
-                -o-transition: background 0.2s linear;
-                transition: background 0.2s linear;
-			}
-
-			.popup-gallery article .article-image:hover .overlay {
-                opacity: 0;
-            }
-			
-
-			.popup-gallery article .article-image .overlay h2 {
-                color: white;
-				position: absolute;
-				top: 50%;
-                left: 50%;
-	  		    -webkit-transform: translate(-50%, -50%);
-                -ms-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-				text-align: center;						    
-			}
 			
 			.popup-gallery article .image {
 				display: block;
-				margin: 0 0 2em 0;
+				margin: 0 0 1em 0;
 			}
 
 				.popup-gallery article .image img {
